src/test/ui/regions/regions-fn-subtyping-return-static.stderr
error[E0308]: mismatched types
  --> $DIR/regions-fn-subtyping-return-static.rs:41:12
   |
LL |     want_F(bar);
   |            ^^^ expected concrete lifetime, found bound lifetime parameter 'cx
   |
   = note: expected type `for<'cx> fn(&'cx S) -> &'cx S`
              found type `for<'a> fn(&'a S) -> &S {bar::<'_>}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
